# genwopl

./: CMakeLists.txt
banks/: banks.ini
banks/fm_banks/wopl_files/: Cartooners.wopl  MM-orchestral.wopl  MM-standard.wopl
sources/: bank_utility.h  common.cpp  common.h  genwopl.cc  genwopl.h
sources/FileFormats/: ffmt_enums.h  ffmt_factory.cpp  format_flatbuffer_opl3.cpp  format_flatbuffer_opl3.h
sources/opl/: measurer.cpp  measurer.h
